# bevy_outline

./: CONTRIBUTERS  Cargo.toml  README.md
assets/: head.glb
examples/: picking.rs  scene.rs
src/: lib.rs  material.rs  picking.rs  pipeline.rs  prepare.rs  smooth_normal.rs  window_size.rs
src/render/: outline.wgsl
