[package]
name = "bevy_outline"
description = "Pixel-Perfect Outline Shader for Bevy"
homepage = "https://github.com/YoshieraHuang/bevy_outline"
repository = "https://github.com/YoshieraHuang/bevy_outline"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["bevy", "shader"]
categories = ["game-development"]

[dependencies]
bevy = { version = "0.15.3", features = ["bevy_render", "bevy_core_pipeline", "bevy_pbr"] }
bytemuck = "1.22.0"
uuid = "1.12.0"

[features]
default = []
picking = []

[dev-dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking"] }

[[example]]
name = "scene"
path = "examples/scene.rs"

[[example]]
name = "picking"
path = "examples/picking.rs"
required-features = ["picking"]
